@@ -2,7 +2,7 @@ AC_INIT(libxklavier/xklavier.c)
 
 PACKAGE=libxklavier
 MAJOR_VERSION=3
-MINOR_VERSION=5
+MINOR_VERSION=6
 VERSION=$MAJOR_VERSION.$MINOR_VERSION
 VERSION_INFO=12:0:0
 
