@@ -1,3 +1,9 @@
+2008-04-14 svu
+
+	* configure.in, libxklavier/xkl_config_item.h,
+	libxklavier/xklavier_config.c, tests/test_config.c: processing the
+	country lists
+
 2008-03-10 svu
 
 	* NEWS: preparing 3.5
